--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -22,5 +22,12 @@
 			"service": "S3AndCloudFront",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"auth": {
+		"myamplifyproject08a00db8": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
 	}
 }
