--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "@aws-amplify/api": "^1.2.4",
     "@aws-amplify/pubsub": "^1.2.4",
+    "aws-amplify": "^1.2.4",
+    "aws-amplify-vue": "^0.3.3",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
